# job_gear_semple

./: .gitignore  README.rst  pyproject.toml
job_gear_sample/: .env  __init__.py  celerybeat-schedule
job_gear_sample/config/: celeryconfig.py
job_gear_sample/jobs/: __init__.py  clockbased_simple_job.py  ondemand_simple_job.py
tests/: test_job_gear_sample.py
