[tool.poetry]
name = "job_gear_sample"
version = "0.1.0"
description = "Sample of a implementation of a activite executable in a background pipline."
authors = ["Marlos Ribeiro"]

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
